[workspace]
members = ["core", "protobuf", "server", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yume Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2024"
rust-version = "1.85.1"
repository = "https://github.com/eduidl/digitalis"
license = "Apache-2.0"

[workspace.dependencies]
digitalis-core = { path = "./core", version = "0.1.0" }
digitalis-protobuf = { path = "./protobuf", version = "0.1.0" }
digitalis-server = { path = "./server", version = "0.1.0" }
log = "0.4"
protobuf = "=3.7.2"
protobuf-codegen = "=3.7.2"
serde = "1.0"
thiserror = "1.0"
tungstenite = { version = "0.19", default-features = false }
tokio = "1.27"
tokio-tungstenite = "0.19"
