[package]
name = "digitalis-core"
version = "0.0.0"
authors = ["Yume Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
description = "Core module for Digitalis"
repository = "https://github.com/eduidl/digitalis"
license = "Apache-2.0"

[dependencies]
base64 = "0.21"
bytes = "1.4"
protobuf = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
thiserror = "1.0"
tungstenite = { version = "0.19", default-features = false }

[dev-dependencies]
digitalis-protobuf = { path = "../protobuf" }
