[package]
name = "digitalis-core"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Core module for Digitalis"
keywords = ["robotics", "foxglove"]

[dependencies]
base64 = "0.21"
bytes = "1.4"
protobuf.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
thiserror.workspace = true
tungstenite.workspace = true

[dev-dependencies]
digitalis-protobuf.workspace = true
