[package]
name = "digitalis-protobuf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Rust implementation of Foxglove message types."
keywords = ["robotics", "protobuf", "foxglove"]
include = ["Cargo.toml", "src/**/*.rs", "build.rs", "3rdparty/**/*.proto"]
readme = "READNE.md"

[dependencies]
protobuf.workspace = true

[build-dependencies]
protobuf-codegen = "3"
