[package]
name = "digitalis-protobuf"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Rust implementation of Foxglove message types."
keywords = ["robotics", "protobuf", "foxglove"]
include = ["Cargo.toml", "src/**/*.rs"]
readme = "READNE.md"

[dependencies]
protobuf.workspace = true
