[package]
name = "digitalis-server"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Base server module for Foxflove"

[dependencies]
async-trait = "0.1"
digitalis-core.workspace = true
futures-util = "0.3"
log.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-tungstenite.workspace = true

[dev-dependencies]
digitalis-protobuf.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
env_logger = "0.10"
